fix(button): use more readable color for red button

--- a/nordic.theme.css
+++ b/nordic.theme.css
@@ -70,7 +70,7 @@
   --button-grey-ghost: rgba(76, 86, 106, 0.1);
   --button-grey-ghost-text: var(--nord-dark4);
   --button-red: var(--nord-red);
-  --button-red-text: var(--nord-light1);
+  --button-red-text: var(--nord-light5);
   --button-red-hover: #ac5861;
   --button-red-active: #975056;
   --button-red-active-outlined: rgba(191, 97, 106, 0.1);
